# nemd

./: .gitignore  .gitmodules  .reviewboardrc  LICENSE  README.md  mac_install  premake  setup  setup.py
bash_scripts/: clean_submodule  profile_nemd  run_itest  run_nemd  run_profiling  run_test  yapall
module/: conformerutils.py  environutils.py  fileutils.py  fragments.py  jobutils.py  lammps.py  logger.py  logutils.py  nemd.py  opls.py  oplsua.py  parserutils.py  plotutils.py  prop_names.py  rdkitutils.py  structutils.py  symbols.py  testutils.py  traj.py  units.py  widgets.py
power_point/: next_to_do.txt  roadmap.txt  roadmaps.pptx
practice/cmake/src/TestSome2/: CMakeLists.txt  configure.sh  main.cpp  refs  testsomeConfig.h.in
proposal/: abstract_en.docx  proposal_polymer_thermal_chem_ml_revised.docx  proposal_polymer_thermal_chem_ml_revised.pptx  proposal_polymer_thermal_chem_ml_v6.docx  research_type.docx
scripts/: amorp_bldr_driver.py  amorphous_driver.py  crystal_builder_driver.py  crystal_driver.py  custom_dump_driver.py  dispersion_driver.py  git_setup  integration_driver.py  lammps_driver.py  lmp_log_driver.py  lmp_traj_driver.py  mol_bldr_driver.py  mol_builder_driver.py  moltemplate_driver.py  pa_chain_datafile.py  pb_conformer_driver.py  polymer_builder_driver.py  polymer_driver.py  reciprocal_lattice_driver.py  therm_cond_gui.py  thermal_conductivity.py  thermal_conductivity_driver.py  thermal_conductivity_gui.py  traj_viewer.py  traj_viewer2.py  xtal_bldr_driver.py
software/: .bashrc  .zshrc  bashrc  job_control  mac_install  refs  ssh  ubuntu_clean_install  ubuntu_gpu  ubuntu_setup
(+442 files in other folders)
